Fixed p tags to be class specific, removed textblock truncation hack (to be done in python instead).

--- a/maalstroom/templates/dds/style.css
+++ b/maalstroom/templates/dds/style.css
@@ -26,7 +26,7 @@ html {
 	box-sizing: border-box;
 }
 
-body#dds {
+body.dds {
 	font: .8em 'ralewaylight', sans-serif;
 	line-height: 1.2em;
 	letter-spacing: .03em;
@@ -57,12 +57,6 @@ h3 {
 	line-height:1em;
 	margin: 0;
 	text-transform: uppercase;
-}
-p {
-	margin: 0 0 6px 0;
-}
-p:last-child {
-	margin-bottom: 0;
 }
 hr.style1 {
 	border-top: 1px solid rgba(0, 0, 0, 0.1);
@@ -749,6 +743,12 @@ ul.dds-channel-submenu li a:hover {
 }
 
 /*BLOG*/
+.blog-post-content p, .blog-header-profile-text p {
+	margin: 0 0 6px 0;
+}
+.blog-post-content p:last-child, .blog-header-profile-text p:last-child {
+	margin-bottom: 0;
+}
 .blog-post-short-wrapper {
 	background: #fff;
 	box-shadow: 0 1px 4px rgba(0,0,0,.04);
@@ -957,14 +957,10 @@ a.blog-photo-post-tags2 {
 	text-decoration: underline;
 }
 .blog-photo-full img {
-	/*max-width: 100%;
-	max-height: 60px;*/
 	width: 100%;
 	height: 300px;
 }
 .blog-photo-full {
-/*	width: 100%;
-	height: auto;*/
 	padding-bottom: 1.5em;
 }
 .blog-photo-small {
@@ -1066,80 +1062,6 @@ a.blog-photo-post-tags2 {
 .blog-post-title a:hover {
 	color: #141c30;
 }
-
-/* styles for text block ellipsis */
-.blog-post-textblock {
-	/* hide text if it more than N lines  */
-	overflow: hidden;
-	/* for set '...' in absolute position */
-	position: relative;
-	/* use this value to count block height */
-	line-height: 1.2em;
-	/* max-height = line-height (1.2) * lines max number (12) */
-	max-height: 14.4em;
-	/* fix problem when last visible word doesn't adjoin right side */
-	text-align: justify;
-	/*margin-right: -1em;*/
-	padding-right: 1em;
-}
-.blog-post-textblock:before {
-	/* points in the end */
-	content: '...';
-	/* absolute position */
-	position: absolute;
-	/* set position to right bottom corner of block */
-	right: 0;
-	bottom: 0;
-}
-.blog-post-textblock:after {
-	/* points in the end */
-	content: '';
-	/* absolute position */
-	position: absolute;
-	/* set position to right bottom corner of text */
-	right: 0;
-	width: 1em;
-	/* set width and height */
-	height: 1em;
-	margin-top: 0.2em;
-	background: white;
-}
-.blog-post-short-textblock {
-	/* hide text if it more than N lines  */
-	overflow: hidden;
-	/* for set '...' in absolute position */
-	position: relative;
-	/* use this value to count block height */
-	line-height: 1.2em;
-	/* max-height = line-height (1.2) * lines max number (6) */
-	max-height: 7.2em;
-	/* fix problem when last visible word doesn't adjoin right side*/
-	text-align: justify;
-	/*margin-right: -1em;*/
-	padding-right: 1em;
-}
-.blog-post-short-textblock:before {
-	/* points in the end */
-	content: '...';
-	/* absolute position */
-	position: absolute;
-	/* set position to right bottom corner of block */
-	right: 0;
-	bottom: 0;
-}
-.blog-post-short-textblock:after {
-	/* points in the end */
-	content: '';
-	/* absolute position */
-	position: absolute;
-	/* set position to right bottom corner of text */
-	right: 0;
-	width: 1em;
-	/* set width and height */
-	height: 1em;
-	margin-top: 0.2em;
-	background: white;
-}
 .blog-comment-bubble {
 	position: relative;
 	background-color: #1e2329;
@@ -1170,7 +1092,7 @@ a.blog-photo-post-tags2 {
 	text-decoration:none;
 }
 .blog-comment-bubble a:hover {
-	color: #38a3af;
+	color: #f28182;
 }
 span.blog-comment-bubble::after {
 	content: "";
